# enurgen-oct-2025

./: .tool-versions  README.md  docker-compose.yml
Flask/enurgen-demo/: Dockerfile  README.md  pyproject.toml
Flask/enurgen-demo/src/: server.py
React/enurgen-demo/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
React/enurgen-demo/src/: Api.tsx  App.css  App.tsx  CSVImage.tsx
Requirements/: readme.md
Requirements/input_data/: irr_data.csv  pwr_data.csv
