[project]
name = "enurgen-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Rhobox",email = "Drazmataz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "peewee (>=3.18.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "enurgen_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
